@@ -20,6 +20,7 @@ Contents:
    widgets
    model_fields
    middleware
+   db
 
 .. note:: functional tools, namely ``@memoize`` and ``@cache``, moved to `funcy <https://github.com/Suor/funcy>`_
 
