@@ -1,3 +1,5 @@
+- added do_sql() and fetch_*() db utilities
+
 0.1.6
 - added javascript revivers
 - fixed datetime handling in @ajax-ed views
